Updated custom.less example

--- a/less/custom.less
+++ b/less/custom.less
@@ -22,7 +22,7 @@
     }
     
     hr {
-        .fs-1;              // Or else margin won’t compute cos’ I love stuff that’s broken in some places
+        @computeScale: 1;   // Or else margin won’t compute cos’ I love stuff that’s broken in some places
         .margin(1, 1);
     }
 
