Initializing nightly branch for v2
- new parametric mixin in utilities
- complete package for columns (might be developed into a plugin and
stripped out of core)
- updated custom example
- experimental utils in dedicated file (might be developed into plugins
and not embedded in core so not imported at the moment)

--- a/less/custom.less
+++ b/less/custom.less
@@ -27,8 +27,8 @@
     }
 
     #prettify;              // Package Pretty Horizontal Rule + Sup/sub
-
-    .generate-columns(4);   // Generate 4 columns (e.g. grid of images)
+    
+    #columns;               // Package columns (e.g. image grid)
 
     h1 a {
         .override-link-color(inherit);  // Overriding link color (e.g. iBooks)
