Refacto + nightly builds

--- a/less/custom.less
+++ b/less/custom.less
@@ -1,5 +1,4 @@
-/* Example, uncomment or erase all to write yours
-
+/*
     h1 {
         .fs-3;              // Columbian = 16pt = 21px
         .margin(0, 3);      // 0 lines before h1, 3 lines after (computed in em)
@@ -28,10 +27,8 @@
 
     #prettify;              // Package Pretty Horizontal Rule + Sup/sub
     
-    #columns;               // Package columns (e.g. image grid)
-
     h1 a {
         .override-link-color(inherit);  // Overriding link color (e.g. iBooks)
     }
 
-                                                                  Uncomment/erase here  */
+                                                                                    */
