--- a/css/nightly_builds/experimental.css
+++ b/css/nightly_builds/experimental.css
@@ -1,165 +1,176 @@
+/* 
+   Stuff that may eventually be added to
+   mnmlst provided that it proves useful 
+   and doesn’t bloat both the system and 
+   the CSS output.
+                                        */
+                                        
+                                        
+/* Design utils for body
+   Don't forget to get rid of 
+   thoses classes before publishing       */
+   
+.sepia {
+  background-color: #faf4e8;
+}
+.gray {
+  background-color: #6d6d6f;
+  color: #fcfcfc;
+}
+.black {
+  background-color: #171717;
+  color: #fcfcfc;
+}
+.baseline {
+  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 92%, rgba(0, 0, 0, 0.3) 100%);
+  background-image: linear-gradient(top, rgba(0, 0, 0, 0) 92%, rgba(0, 0, 0, 0.3) 100%);
+  background-size: 100% 1.5em;
+  /* repeat on each line */
+  background-position: top -0.45em left 0;
+  /* sets on real baseline, top might be changed */
+}
+
+
+/* Functional classes */
+
 .rounded-box {
   border-radius: 10px;
 }
-
 .color-1 {
   color: #89a9b4;
 }
-
 .color-2 {
   color: #6996a1;
 }
-
 .color-3 {
   color: #537f84;
 }
-
 .color-4 {
   color: #3f6465;
 }
-
 .color-5 {
   color: #2c4544;
 }
-
 hr {
   width: 20%;
   margin-left: 40%;
   border: none;
   height: 1px;
   background-color: #8c8b8b;
+  /* fallback if linear-gradient is not supported */
   background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
-
+/*  COLUMNS
+        Usage: Image Grids */
 .col-wrap {
   page-break-inside: avoid;
   width: auto;
 }
-
 .col-1 {
   width: 25%;
 }
-
 .col-2 {
   width: 50%;
 }
-
 .col-3 {
   width: 75%;
 }
-
 .col-4 {
   width: 100%;
 }
-
 .col-float {
   display: inline-block;
 }
-
-.col-float>img {
+.col-float > img {
   width: 100%;
 }
-
-.clear {
+.clearfix {
   clear: both;
+  /* Usage: <div class="clearfix"/> before closing .col-wrap */
 }
-
+/* FREEFORM
+        Usage: titlepage (book, parts, etc.) */
 .ff_block-1 {
   display: block;
   margin-left: 2.5%;
 }
-
 .ff_block-2 {
   display: block;
   margin-left: 5%;
 }
-
 .ff_block-3 {
   display: block;
   margin-left: 7.5%;
 }
-
 .ff_block-4 {
   display: block;
   margin-left: 10%;
 }
-
 .ff_block-5 {
   display: block;
   margin-left: 12.5%;
 }
-
 .ff_block-6 {
   display: block;
   margin-left: 15%;
 }
-
 .ff_block-7 {
   display: block;
   margin-left: 17.5%;
 }
-
 .ff_block-8 {
   display: block;
   margin-left: 20%;
 }
-
 .ff_block-9 {
   display: block;
   margin-left: 22.5%;
 }
-
 .ff_block-10 {
   display: block;
   margin-left: 25%;
 }
-
 .ff-center {
+  /* can be used with a span in headings */
   display: block;
   text-align: center;
   text-indent: 0;
 }
-
 .ff-right {
+  /* can be used with a span in headings */
   display: block;
   text-align: right;
   text-indent: 0;
 }
-
 .ff_inline-block-1 {
   display: inline-block;
   margin-left: 2.5%;
 }
-
 .ff_inline-block-2 {
   display: inline-block;
   margin-left: 5%;
 }
-
 .ff_inline-block-3 {
   display: inline-block;
   margin-left: 7.5%;
 }
-
 .ff_inline-block-4 {
   display: inline-block;
   margin-left: 10%;
 }
-
 .ff_inline-block-5 {
   display: inline-block;
   margin-left: 12.5%;
 }
-
 .ff-400 {
+  /* weight of span */
   font-weight: 400;
 }
-
 .ff-700 {
   font-weight: 700;
 }
-
 .ff-italic {
+  /* style of span */
   font-style: italic;
 }
