--- a/less/contrast.less
+++ b/less/contrast.less
@@ -6,7 +6,7 @@
 
 // Variables
 
-// iBooks
+// iBooks (iOS)
 @ibooksWhiteBg : #fafbfa;
 @ibooksWhiteText : #000000;
 @ibooksWhiteLink : #406bfb;
@@ -20,7 +20,7 @@
 @ibooksBlackText : #b1b1b1;
 @ibooksBlackLink : #55beff;
 
-// Kindle
+// Kindle (Fire)
 @kindleWhiteBg : #ffffff;
 @kindleWhiteText : #232323;
 @kindleWhiteLink : #02a5e2;
@@ -33,6 +33,23 @@
 @kindleBlackBg : #121212;
 @kindleBlackText : #a5a5a5;
 @kindleBlackLink : #03a3df;
+
+// Kobo (iOS)
+@koboWhiteBg : #ffffff;
+@koboWhiteText : #000000;
+@koboWhiteLink : #042eee;
+@koboSepiaBg : #eae4d3;
+@koboSepiaText : #453d2d; 
+@koboSepiaLink : #433ec8;
+@koboCyanBg : #e5f6f9;
+@koboCyanText : #001015;
+@koboCyanLink : #042eeb;
+@koboGrayBg : #323333;
+@koboGrayText : #ededed;
+@koboGrayLink : #1daec7;
+@koboBlackBg : #000000;
+@koboBlackText : #bbbabb;
+@koboBlackLink : #1daec7;
 
 
 // Mixins
