Added small-caps utility

--- a/less/utilities.less
+++ b/less/utilities.less
@@ -28,6 +28,12 @@
     text-decoration: @uLine @uStyle @uColor;
 }
 
+.small-caps {
+    text-transform: lowercase;
+    font-variant: small-caps;
+    letter-spacing: 0.03125em;
+}
+
 .width-center(@elWidth) {
     width: @elWidth + 0%;
     margin-left: ((100 - @elWidth) / 2) + 0%;
