Fine-tuned small-caps utility

--- a/less/utilities.less
+++ b/less/utilities.less
@@ -29,9 +29,9 @@
 }
 
 .small-caps {
-    text-transform: lowercase;
+    text-transform: lowercase;  /* text should be typed in uppercase (RMSDK) */
     font-variant: small-caps;
-    letter-spacing: 0.03125em;
+    letter-spacing: 0.05em;
 }
 
 .width-center(@elWidth) {
