--- a/less/custom.less
+++ b/less/custom.less
@@ -30,5 +30,12 @@
     h1 a {
         .override-link-color(inherit);  // Overriding link color (e.g. iBooks)
     }
+    
+    .rounded-box {
+        .fs-small;
+        .margin(1, 1);
+        .bordered;
+        .border-radius(10px);   
+    }
 
                                                                                     */
