--- a/css/plugins/cover.css
+++ b/css/plugins/cover.css
@@ -7,16 +7,14 @@ body {
   height: 100%;
 }
 div,
-figure,
-.full-bleed {
+figure {
   margin: 0;
   padding: 0;
   height: 99%;
   text-align: center;
   text-indent: 0;
 }
-img,
-.portrait {
+img {
   width: auto;
   max-width: 100%;
   height: 100%;
