--- a/less/plugins/cover.less
+++ b/less/plugins/cover.less
@@ -1,5 +1,7 @@
 /* CSS for cover */
 
+// Should be compiled apart and not embedded in foundation
+
 @import (reference) '../utils/utilities';
 @import (reference) '../functionalCSS/align';
 
@@ -11,16 +13,14 @@ body {
 }
 
 div, 
-figure, 
-.full-bleed {
+figure {
     margin: 0;
     padding: 0;
     height: 99%;
     .center;
 }
 
-img, 
-.portrait {
+img {
     width: auto;
     max-width: 100%;
     height: 100%;
