--- a/css/plugins/helpers.css
+++ b/css/plugins/helpers.css
@@ -1,7 +1,7 @@
 /*  DESIGN HELPERS
     Stuff you can use while authoring your CSS.
     Don’t forget to get rid of them before publishing! */
-
+    
 .mint {
   background-color: #c5e6ce;
 }
@@ -28,35 +28,53 @@
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 92%, rgba(0, 0, 0, 0.3) 100%);
   background-image: linear-gradient(top, rgba(0, 0, 0, 0) 92%, rgba(0, 0, 0, 0.3) 100%);
   background-size: 100% 1.5em;              /* repeat on each line */
-  background-position: top -0.45em left 0;  /* sets on real baseline, top might be changed */
+  background-position: top -0.35em left 0;  /* sets on real baseline, top might be changed */
 }
 
-.paginate {
-  /* Usage: <body class="paginate"> */
-  width: 1024px;
-  height: 768px;
-  margin: 0;
-  padding: 82px 66px 65px 66px;
-  overflow-x: auto;
-  -webkit-column-width: 414px;
-  -moz-column-width: 414px;
-  column-width: 414px;
-  -webkit-column-gap: 64px;
-  -moz-column-gap: 64px;
-  column-gap: 64px;
+/*  Start Previewer 
+    Don't forget to get rid of dat shit
+    before distributing your fucking file! */   
+html {
   box-sizing: border-box;
+  width: 1024px;
+  height: 620px;
+  margin: 88px 0 60px;
+  padding: 0 61px;
+  overflow-x: auto;
+  -webkit-column-width: 422px;
+  -webkit-column-gap: 58px;
+  -moz-column-width: 422px;
+  -moz-column-gap: 58px;
+  column-width: 422px;
+  column-gap: 58px;
+  column-fill: auto;
   -webkit-perspective: 1;   /* fixes some issues in Chrome */
 }
-
-.paginate:after {
+body {
+  margin: 0 5px !important;
+}
+html:before {
+  box-sizing: border-box;
+  content: ' ';
+  position: fixed;
+  width: 1024px;
+  height: 768px;
+  top: 0;
+  left: 0;
+  border: 2px solid #666;
+  border-radius: 3px;
+}
+body:after {
   display: block;
   content: ' ';
   -webkit-column-break-before: always;
   column-break-before: always;
   page-break-before: always;
   break-before: always;
-  height: 80%;
+  height: 620px;
   width: 2px;
   background-color: rgba(0, 0, 0, 0.3);
 }
+/* End Previewer                            */
+
 /* End design helpers */
