--- a/less/plugins/helpers.less
+++ b/less/plugins/helpers.less
@@ -86,7 +86,10 @@
 #paginate() {   // Pseudo “paginated content previewer” (iBooks landscape)
     /*  Start Previewer 
         Don't forget to get rid of dat shit
-        before distributing your fucking file! */
+        before distributing your fucking file!
+        It will crash iBooks and burn your CPU…
+        I’m not kidding. 
+        So don't forget to get rid of it.            */
         
     html {
 	    box-sizing: border-box;
