--- a/less/plugins/helpers.less
+++ b/less/plugins/helpers.less
@@ -85,11 +85,11 @@
 
 #paginate() {   // Pseudo “paginated content previewer” (iBooks landscape)
     /*  Start Previewer 
-        Don't forget to get rid of dat shit
-        before distributing your fucking file!
+        Don't forget to get rid of dat crap
+        before distributing your ePub file!
         It will crash iBooks and burn your CPU…
-        I’m not kidding. 
-        So don't forget to get rid of it.            */
+        I’m not kidding. And it's pretty nasty.
+        So don't forget to get rid of it. Thanks!       */
         
     html {
 	    box-sizing: border-box;
