Added embed-fonts plugin in core

--- a/less/mnmlst.less
+++ b/less/mnmlst.less
@@ -9,6 +9,9 @@
 @import (reference) 'utils/rhythm';
 @import (reference) 'utils/utilities';
 
+// Pause and embed fonts (uncomment following line if needed)
+// @import 'plugins/embed-fonts';
+
 // Build Foundation (unimpacted by cascade/custom)
 @import 'foundation/normalize';
 @import 'foundation/base';
