--- a/less/plugins/embed-fonts.less
+++ b/less/plugins/embed-fonts.less
@@ -42,6 +42,7 @@
     .embed-font(Open Sans, OpenSans-BoldItalic, bold, italic)   
 }
 
+// The following you’d better output in custom
 .example {
     .font-stack(Open Sans, @humanist);   
 }
