Added "vertical center" plugin for images

--- a/less/mnmlst.less
+++ b/less/mnmlst.less
@@ -30,5 +30,6 @@
 // @import (optional) 'plugins/subtle-palette';
 // @import (optional) 'plugins/complementary-palette';
 // @import (optional) 'plugins/grid';
+// @import (optional) 'plugins/vertical-center';
 // @import (optional) 'plugins/freeform';
 // @import (optional) 'plugins/helpers';
