--- a/less/mnmlst.less
+++ b/less/mnmlst.less
@@ -28,6 +28,7 @@
 
 // Connect plugins (uncomment to embed in mnmlst.css or output specific CSS from each plugin)
 // @import (optional) 'plugins/tables';
+// @import (optional) 'plugins/code';
 // @import (optional) 'plugins/subtle-palette';
 // @import (optional) 'plugins/complementary-palette';
 // @import (optional) 'plugins/grid';
