Added portrait img + caption

--- a/less/mnmlst.less
+++ b/less/mnmlst.less
@@ -27,6 +27,7 @@
 @import 'functionalCSS/fluid';
 
 // Connect plugins (uncomment to embed in mnmlst.css or output specific CSS from each plugin)
+// @import (optional) 'plugins/portrait-img';
 // @import (optional) 'plugins/tables';
 // @import (optional) 'plugins/code';
 // @import (optional) 'plugins/subtle-palette';
