Added filters + blend modes

--- a/less/mnmlst.less
+++ b/less/mnmlst.less
@@ -30,6 +30,8 @@
 // @import (optional) 'plugins/portrait-img';
 // @import (optional) 'plugins/tables';
 // @import (optional) 'plugins/code';
+// @import (optional) 'plugins/filters';
+// @import (optional) 'plugins/blend';
 // @import (optional) 'plugins/subtle-palette';
 // @import (optional) 'plugins/complementary-palette';
 // @import (optional) 'plugins/grid';
